--- a/config.yaml
+++ b/config.yaml
@@ -49,3 +49,9 @@ params:
   ShowReadingTime: false
   disableScrollToTop: true
   ShowPostNavLinks: true
+  assets:
+    favicon: "/assets/favicon/favicon.ico"
+    favicon16x16: "/assets/favicon/favicon-16x16.png"
+    favicon32x32: "/assets/favicon/favicon-32x32.png"
+    apple_touch_icon: "/assets/favicon/apple-touch-icon.png"
+    safari_pinned_tab: "/assets/favicon/safari-pinned-tab.svg"
