--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,6 @@ buildDrafts: false
 buildFuture: false
 buildExpired: false
 enableEmoji: true
-pygmentsUseClasses: true
 
 permalinks:
   page:
@@ -38,12 +37,12 @@ menu:
     - name: ~/projects
       url: projects
       weight: 1
-    - name: archive
-      url: archives
-      weight: 2
-    - name: tags
-      url: tags
-      weight: 3
+    # - name: archive
+    #   url: archives
+    #   weight: 2
+    # - name: tags
+    #   url: tags
+    #   weight: 3
     - name: search
       url: search
       weight: 4
