--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ baseURL: "https://markphilpot.com"
 languageCode: en-us
 title: mark philpot
 theme: PaperModX
+timeout: 90s
 
 enableInlineShortcodes: true
 enableRobotsTXT: true
