--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@atproto/api": "^0.13.26",
     "dotenv": "^16.4.7",
     "markdown-it": "^14.1.0",
-    "mastodon-api": "^1.3.0",
+    "masto": "^6.10.3",
     "yargs": "^17.7.2"
   },
   "packageManager": "pnpm@8.14.3+sha512.c3ed80eb583be3e2b7ef31eb96b8b9cfaa0503e5d44ec717514120b5187b2f933736e9038c51a5a23ad582790ba41d4ab784618c89fa7e2365f6665685d612ee"
