Centering layouts, adjusting fonts

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -8,19 +8,19 @@ title = "mark philpot"
   displayName = "EN"
   isoCode = "en"
   rtl = false
-  dateFormat = "2 January 2006"
+  dateFormat = "January 2, 2006"
   # logo = "img/logo.png"
   # secondaryLogo = "img/secondary-logo.png"
   # description = "My awesome website"
   # copyright = "Copy, _right?_ :thinking_face:"
 
 [params.author]
-  name = "Mark Philpot"
+  name = ""
   email = "mark@philpot.org"
 #   image = "img/blowfish_logo.png"
 #   imageQuality = 96
-  headline = "I'm only human"
-  bio = "A little bit about you"
+#  headline = "I'm only human"
+#  bio = "A little bit about you"
   links = [
 #     { email = "mailto:hello@your_domain.com" },
 #     { link = "https://link-to-some-website.com/" },
@@ -33,7 +33,6 @@ title = "mark philpot"
 #     { discord = "https://discord.gg/invitecode" },
 #     { dribbble = "https://dribbble.com/username" },
 #     { facebook = "https://facebook.com/username" },
-#     { flickr = "https://www.flickr.com/photos/username/" },
 #     { foursquare = "https://foursquare.com/username" },
     { github = "https://github.com/markphilpot" },
 #     { gitlab = "https://gitlab.com/username" },
@@ -49,6 +48,7 @@ title = "mark philpot"
 #     { medium = "https://medium.com/username" },
 #     { microsoft = "https://www.microsoft.com/" },
 #     { orcid = "https://orcid.org/userid" },
+    { flickr = "https://www.flickr.com/photos/markphilpot/" },
 #     { patreon = "https://www.patreon.com/username" },
 #     { pinterest = "https://pinterest.com/username" },
 #     { reddit = "https://reddit.com/user/username" },
