--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -20,6 +20,16 @@
   url = "/projects"
   weight = 20
 
+[[main]]
+  name = "/now"
+  url = "/now"
+  weight = 30
+
+[[main]]
+  name = "/about"
+  url = "/about"
+  weight = 40
+
 #[[main]]
 #  name = "example sub-menu 1"
 #  parent = "Parent"
