--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -70,4 +70,5 @@ title = "mark philpot"
 #     { youtube = "https://youtube.com/username" },
 #     { ko-fi = "https://ko-fi.com/username" },
 #     { codeberg = "https://codeberg.org/username"},
+    { rss = "https://markphilpot/index.xml"}
   ]
