--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -25,6 +25,9 @@ enableEmoji = true
     blog = '/posts/:year/:month/:day/:slug'
     micro = '/micro/:year:month:day:15:04'
 
+[services.rss]
+  limit = 42
+
 [pagination]
   pagerSize = 100
 
