Better showMore behavior

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -45,9 +45,9 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
   layout = "background" # valid options: page, profile, hero, card, background, custom
   homepageImage = "deck_sunrise.jpg" # used in: hero, and card
   showRecent = true
-  showRecentItems = 8
+  showRecentItems = 10
   showMoreLink = true
-  showMoreLinkDest = "/micro/"
+  showMoreLinkDest = "/micro/page/2"
   cardView = false
   cardViewScreenWidth = false
   layoutBackgroundBlur = true # only used when layout equals background
