--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -50,7 +50,7 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
   showMoreLinkDest = "/micro/page/2"
   cardView = false
   cardViewScreenWidth = false
-  layoutBackgroundBlur = true # only used when layout equals background
+  layoutBackgroundBlur = false # only used when layout equals background
   contentView = true
 
 [article]
